# getMusicApp

./: .gitignore  CMakeLists.txt  README.md  config.conf  downloadManager.cpp  downloadManager.h  logView.cpp  logView.h  logViewLyrics.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setting.txt  settingDialog.cpp  settingDialog.h  untitled.ui
Music/: getMusic.cpp
